Collage controller documentation
